--- a/.github/workflows/build-samples.yml
+++ b/.github/workflows/build-samples.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [x86_64, "386", armv7, aarch64, riscv64, s390x, ppc64le]
+        arch: [x86_64, aarch64]
 
     steps:
       - uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
@@ -43,37 +43,6 @@ jobs:
             echo "no SBOMs found!"
             exit 1
           fi
-          for f in *.spdx.json; do
-            echo ::group::sbom.json
-            cat $f
-            echo ::endgroup::
-            docker run --rm -v $(pwd)/$f:/sbom.json cgr.dev/chainguard/ntia-conformance-checker -v --file /sbom.json
-          done
-
-  # Build a multi-arch nginx image for all archs.
-  build-nginx-multiarch:
-    name: build-nginx-multiarch
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-
-    steps:
-      - uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
-        with:
-          egress-policy: audit
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v2.1.5
-        with:
-          go-version-file: 'go.mod'
-          check-latest: true
-      - run: |
-          make apko
-          ./apko build ./examples/nginx.yaml nginx:build /tmp/nginx.tar --arch x86_64,386,armv7,aarch64,s390x,ppc64le
-
-      - name: Check SBOM Conformance
-        run: |
-          set -euxo pipefail
           for f in *.spdx.json; do
             echo ::group::sbom.json
             cat $f
@@ -116,7 +85,7 @@ jobs:
             fi
           done
 
-  build-alpine-source-date-epoch:
+  build-wolfi-source-date-epoch:
     name: source-date-epoch
     runs-on: ubuntu-latest
 
@@ -141,11 +110,11 @@ jobs:
           SOURCE_DATE_EPOCH: "0"
         run: |
           make apko
-          FIRST=$(./apko publish ./examples/alpine-base.yaml localhost:5000/alpine --arch x86_64,386,armv7,aarch64,s390x,ppc64le 2> /dev/null)
+          FIRST=$(./apko publish ./examples/wolfi-base.yaml localhost:5000/wolfi --arch x86_64,aarch64 2> /dev/null)
 
           for idx in {2..10}
           do
-            NEXT=$(./apko publish ./examples/alpine-base.yaml localhost:5000/alpine --arch x86_64,386,armv7,aarch64,s390x,ppc64le 2> /dev/null)
+            NEXT=$(./apko publish ./examples/wolfi-base.yaml localhost:5000/wolfi --arch x86_64,aarch64 2> /dev/null)
 
             if [ "${FIRST}" = "${NEXT}" ]; then
               echo "Build ${idx} matches."
@@ -155,7 +124,7 @@ jobs:
             fi
           done
 
-  build-alpine-build-date-epoch:
+  build-wolfi-build-date-epoch:
     name: build-date-epoch
     runs-on: ubuntu-latest
 
@@ -180,11 +149,11 @@ jobs:
           make apko
           # Without SOURCE_DATE_EPOCH set, the timestamp of the image will be computed to be
           # the maximum build date of the resolved APKs.
-          FIRST=$(./apko publish ./examples/alpine-base.yaml localhost:5000/alpine --arch x86_64,386,armv7,aarch64,s390x,ppc64le 2> /dev/null)
+          FIRST=$(./apko publish ./examples/wolfi-base.yaml localhost:5000/wolfi --arch x86_64,aarch64 2> /dev/null)
 
           for idx in {2..10}
           do
-            NEXT=$(./apko publish ./examples/alpine-base.yaml localhost:5000/alpine --arch x86_64,386,armv7,aarch64,s390x,ppc64le 2> /dev/null)
+            NEXT=$(./apko publish ./examples/wolfi-base.yaml localhost:5000/wolfi --arch x86_64,aarch64 2> /dev/null)
 
             if [ "${FIRST}" = "${NEXT}" ]; then
               echo "Build ${idx} matches."
@@ -218,7 +187,7 @@ jobs:
           make apko
 
           # Build image with annotations.
-          ref=$(./apko publish ./examples/nginx.yaml localhost:5000/nginx --arch x86_64,386,armv7,aarch64,s390x,ppc64le)
+          ref=$(./apko publish ./examples/nginx.yaml localhost:5000/nginx --arch x86_64,aarch64)
 
           # Check index annotations.
           crane manifest $ref | jq -r '.annotations.foo' | grep bar
